--- a/app/src/main/res/layout/activity_login_akt.xml
+++ b/app/src/main/res/layout/activity_login_akt.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login_akt"
@@ -10,73 +10,68 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="project.martin.bepeakedprojekt.login_akt"
-    android:background="@drawable/background">
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editUsername"
-        android:layout_below="@+id/textUsername"
-        android:layout_alignLeft="@+id/textUsername"
-        android:layout_alignStart="@+id/textUsername"
-        android:hint="Enter username here..." />
-
-    <TextView
-        android:text="Password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textPassword"
-        android:layout_below="@+id/editUsername"
-        android:layout_alignLeft="@+id/editUsername"
-        android:layout_alignStart="@+id/editUsername"
-        android:textColor="@color/colorAccent" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/editPassword"
-        android:layout_below="@+id/textPassword"
-        android:layout_alignLeft="@+id/textPassword"
-        android:layout_alignStart="@+id/textPassword" />
+    android:background="@mipmap/background"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/bepeaked_logo"
+        android:layout_gravity="center"
         android:id="@+id/imageView"
-        android:layout_above="@+id/editUsername"
-        android:layout_alignLeft="@+id/textUsername"
-        android:layout_alignStart="@+id/textUsername"
-        android:layout_marginBottom="23dp" />
+        android:layout_marginBottom="11dp" />
+
+    <LinearLayout
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="Username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="11dp"
+            android:id="@+id/textUsername"
+            android:textColor="@color/colorAccent" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/editUsername"
+            android:hint="Enter username here..." />
+
+        <TextView
+            android:text="Password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textPassword"
+            android:textColor="@color/colorAccent" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editPassword" />
+    </LinearLayout>
 
     <Button
         android:text="Log in"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonLogin"
-        android:layout_below="@+id/editPassword"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="Username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="162dp"
-        android:id="@+id/textUsername"
-        android:textColor="@color/colorAccent"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/buttonLogin"
-        android:layout_toStartOf="@+id/buttonLogin" />
+        android:id="@+id/buttonLogin" />
 
     <TextView
         android:text="@string/opretBruger"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/opretBruger"
-        android:layout_below="@+id/buttonLogin"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        android:id="@+id/opretBruger" />
+
+</LinearLayout>
