rettet klasse navne

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="project.martin.bepeakedprojekt.mainMenu"
+    tools:context="project.martin.bepeakedprojekt.MainMenu_akt"
     android:background="@mipmap/background"
     android:orientation="vertical">
 
