--- a/app/src/main/res/layout/activity_diet_plan_menu.xml
+++ b/app/src/main/res/layout/activity_diet_plan_menu.xml
@@ -9,6 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@mipmap/background"
-    tools:context="project.martin.bepeakedprojekt.DietPlanMenu">
+    tools:context="project.martin.bepeakedprojekt.DietPlanMenu_akt">
 
 </RelativeLayout>
