--- a/app/src/main/res/layout/activity_workout_menu.xml
+++ b/app/src/main/res/layout/activity_workout_menu.xml
@@ -9,6 +9,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@mipmap/background"
-    tools:context="project.martin.bepeakedprojekt.WorkoutMenu_akt">
+    tools:context="project.martin.bepeakedprojekt.Workout.WorkoutMenu_akt">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/listWorkoutMenu" />
 </RelativeLayout>
