--- a/app/src/main/res/layout/workout_liste_element.xml
+++ b/app/src/main/res/layout/workout_liste_element.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:text="TextView"
-            android:layout_width="match_parent"
+            android:layout_width="327dp"
             android:layout_height="wrap_content"
             android:id="@+id/wle_WorkoutTitle"
             android:textSize="36sp" />
@@ -25,5 +25,11 @@
             android:textSize="14sp" />
 
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/forward"
+        android:id="@+id/wle_Image" />
 
 </LinearLayout>
