--- a/app/src/main/res/layout/list_exercise_element.xml
+++ b/app/src/main/res/layout/list_exercise_element.xml
@@ -10,11 +10,15 @@
         android:layout_height="wrap_content"
         android:id="@+id/ele_ExerciseTitle"
         android:layout_weight="1"
-        android:textSize="36sp" />
+        android:textSize="36sp"
+        android:layout_margin="5dp"
+        android:layout_marginBottom="5dp"/>
 
     <ImageView
         android:layout_height="49dp"
         app:srcCompat="@drawable/forward"
         android:id="@+id/ele_image"
-        android:layout_width="49dp" />
+        android:layout_width="49dp"
+        android:layout_margin="5dp"
+        android:layout_marginBottom="5dp"/>
 </LinearLayout>
