--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -11,29 +11,34 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="project.martin.bepeakedprojekt.MainMenu_akt"
     android:background="@mipmap/background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/bepeaked_logo"
+            android:layout_height="177dp"
+            app:srcCompat="@drawable/logotext"
             android:layout_gravity="center"
             android:id="@+id/imageView"
-            android:layout_marginBottom="56dp" />
+            android:layout_margin="20dp"
+            android:layout_marginBottom="30dp"
+            android:layout_weight="0.10" />
 
         <Button
             android:text="Workouts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
-            android:id="@+id/WorkoutButton" />
+            android:id="@+id/WorkoutButton"
+            style="@style/Widget.AppCompat.Button" />
 
         <Button
             android:text="Exercises"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
-            android:id="@+id/ExerciseButton" />
+            android:id="@+id/ExerciseButton"
+            style="@style/Widget.AppCompat.Button" />
 
         <Button
             android:text="Diet Plan"
