--- a/app/src/main/res/layout/activity_diet_plan_menu.xml
+++ b/app/src/main/res/layout/activity_diet_plan_menu.xml
@@ -9,6 +9,6 @@
     <ExpandableListView
         android:id="@+id/simpleExpandableListView"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
