--- a/app/src/main/res/layout/items_child_diet_plan.xml
+++ b/app/src/main/res/layout/items_child_diet_plan.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
@@ -22,7 +23,17 @@
         android:layout_toRightOf="@id/sequence"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="24sp"
-        android:layout_margin="2dp"
-        android:layout_marginBottom="2dp"/>
+        android:layout_margin="5dp"
+        android:layout_marginBottom="5dp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/forward"
+        android:layout_alignTop="@+id/childItem"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/imageView2"
+        android:layout_alignBottom="@+id/childItem" />
 
 </RelativeLayout>
