tilføjet lidt klasser hist og her

--- a/app/src/main/res/layout/list_workout_element.xml
+++ b/app/src/main/res/layout/list_workout_element.xml
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/wle_Exercises"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:layout_marginBottom="5dp"/>
 
     </LinearLayout>
 
