for Franks skyld :D

--- a/app/src/main/res/layout/activity_exercise_akt.xml
+++ b/app/src/main/res/layout/activity_exercise_akt.xml
@@ -12,11 +12,11 @@
     android:background="@mipmap/background"
     android:orientation="vertical">
 
-    <ToggleButton
+    <Button
         android:text="ToggleButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ex_togglebutton" />
+        android:id="@+id/ex_button" />
 
     <FrameLayout
         android:layout_width="match_parent"
