--- a/app/src/main/res/layout/frag_exercise_description.xml
+++ b/app/src/main/res/layout/frag_exercise_description.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:text="Button"
+        android:text="Results"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ex_description_button" />
