--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/settings"
-        android:icon="@mipmap/ic_settings_white_24dp"
         android:title="Settings"
-        android:showAsAction="always"></item>
+        android:showAsAction="never"></item>
     <item
         android:title="Log out"
         android:id="@+id/logout"
