--- a/app/src/main/res/layout/frag_exercise_results.xml
+++ b/app/src/main/res/layout/frag_exercise_results.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
     <Button
-        android:text="Description"
+        android:text="Go to Description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ex_results_button" />
