Lavet recipe'en protiensmoothie

--- a/app/src/main/res/layout/activity_recipe_akt.xml
+++ b/app/src/main/res/layout/activity_recipe_akt.xml
@@ -23,5 +23,6 @@
         android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rc_description" />
+        android:id="@+id/rc_description"
+        android:textSize="18sp" />
 </LinearLayout>
