--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,18 +28,10 @@
         <item name="android:layout_height">match_parent</item>
     </style>
 
-    <style name="QTheme" parent="android:Theme.Light">
-        <item name="android:windowBackground">@color/q_green</item>
-        <item name="android:colorBackground">@color/q_green</item>
-        <item name="android:textAppearance">@style/QText</item>
-    </style>
-
-    <color name="q_green">#008000</color>
-    <color name="white">#FFFFFF</color>
-
-    <style name="QText" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/white</item>
+    <style name="resta_header" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">#000</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">Verdana</item>
     </style>
 </resources>
