Added scroll view to result table (even sexier).

--- a/app/src/main/res/layout/frag_exercise_results.xml
+++ b/app/src/main/res/layout/frag_exercise_results.xml
@@ -21,11 +21,22 @@
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/ex_graph" />
 
-        <TableLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/res_tableresult">
-        </TableLayout>
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/res_tableresult">
+                </TableLayout>
+            </LinearLayout>
+        </ScrollView>
 
         <!--<GridView-->
     <!--android:layout_width="match_parent"-->
