--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -4,8 +4,12 @@
     <item android:id="@+id/settings"
         android:icon="@drawable/ic_settings_white_24dp"
         android:title="Settings"
-        app:showAsAction="always"  />
+        app:showAsAction="always"/>
+    <item android:id="@+id/about"
+        android:title="About"
+        app:showAsAction="never"/>
     <item android:id="@+id/logout"
         android:title="Log Out"
         app:showAsAction="never"/>
+
 </menu>
