--- a/app/src/main/res/layout/frag_exercise_description.xml
+++ b/app/src/main/res/layout/frag_exercise_description.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ex_descriptiontext"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textSize="16sp" />
 
 </LinearLayout>
