--- a/app/src/main/res/layout/activity_exercise_akt.xml
+++ b/app/src/main/res/layout/activity_exercise_akt.xml
@@ -4,13 +4,32 @@
     android:id="@+id/activity_exercise_akt"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="project.martin.bepeakedprojekt.Exercises.Exercise.Exercise_akt"
     android:background="@mipmap/background"
     android:orientation="vertical">
+    <!--android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"-->
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_below="@+id/appBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:fadingEdge="none" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tab_layout"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <FrameLayout
         android:layout_width="match_parent"
