--- a/app/src/main/res/layout/activity_login_akt.xml
+++ b/app/src/main/res/layout/activity_login_akt.xml
@@ -68,7 +68,11 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonLogin" />
+        android:id="@+id/buttonLogin"
+        style="@android:style/Widget.Holo.Button"
+        android:backgroundTint="@android:drawable/screen_background_light_transparent"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="20sp"/>
 
     <TextView
         android:text="@string/opretBruger"
