--- a/app/src/main/res/layout/frag_exercise_results.xml
+++ b/app/src/main/res/layout/frag_exercise_results.xml
@@ -129,5 +129,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         app:backgroundTint="#5BBA78"
-        app:fabSize="mini" />
+        app:fabSize="mini"
+        android:layout_marginBottom="10dp"/>
 </RelativeLayout>
