--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#5BBA78</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#000000</color>
-
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="textColor">#FFFFFF</color>
     <color name="divider_color">#308030</color>
 </resources>
