--- a/app/src/main/res/layout/frag_exercise_description.xml
+++ b/app/src/main/res/layout/frag_exercise_description.xml
@@ -16,21 +16,21 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@mipmap/ic_launcher"
                     android:id="@+id/ex_imagebefore"
-                    android:layout_weight="1" />
+                    android:layout_weight="50" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@mipmap/ic_launcher"
                     android:id="@+id/ex_imageafter"
-                    android:layout_weight="1" />
+                    android:layout_weight="50" />
 
             </LinearLayout>
 
