--- a/app/src/main/res/layout/activity_login_akt.xml
+++ b/app/src/main/res/layout/activity_login_akt.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="project.martin.bepeakedprojekt.Login_akt"
+    tools:context="project.martin.bepeakedprojekt.login_akt"
     android:background="@mipmap/background"
     android:orientation="vertical"
     android:weightSum="1">
