--- a/app/src/main/res/layout/items_child_diet_plan.xml
+++ b/app/src/main/res/layout/items_child_diet_plan.xml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <TextView
-        android:id="@+id/sequence"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:paddingLeft="35sp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="24sp"
-        android:layout_margin="2dp"
-        android:layout_marginBottom="2dp"/>
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/childItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/sequence"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="24sp"
         android:layout_margin="5dp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:paddingLeft="50dp"
+        android:layout_weight="90"
+        android:singleLine="true" />
+
+
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:srcCompat="@drawable/forward"
         android:layout_alignTop="@+id/childItem"
         android:layout_alignParentRight="true"
@@ -36,4 +28,4 @@
         android:id="@+id/imageView2"
         android:layout_alignBottom="@+id/childItem" />
 
-</RelativeLayout>
+</LinearLayout>
