--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -25,7 +25,6 @@
             android:layout_weight="0.10" />
 
         <Button
-            android:text="Workouts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
@@ -33,10 +32,10 @@
             style="@android:style/Widget.Holo.Button"
             android:backgroundTint="@android:drawable/screen_background_light_transparent"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:text="@string/mainMenu_buttonWorkoutMenu" />
 
         <Button
-            android:text="Exercises"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
@@ -44,10 +43,10 @@
             style="@android:style/Widget.Holo.Button"
             android:backgroundTint="@android:drawable/screen_background_light_transparent"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:text="@string/mainMenu_buttonExerciseLibrary" />
 
         <Button
-            android:text="Diet Plan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
@@ -55,6 +54,7 @@
             style="@android:style/Widget.Holo.Button"
             android:backgroundTint="@android:drawable/screen_background_light_transparent"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:text="@string/mainMenu_buttonDietPlan" />
 
 </LinearLayout>
