--- a/app/src/main/res/layout/popup_createworkout.xml
+++ b/app/src/main/res/layout/popup_createworkout.xml
@@ -5,7 +5,7 @@
     android:padding="10dp">
 
     <TextView
-        android:text="Give your new Workout a name:"
+        android:text="@string/createWorkout_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/workoutName"
@@ -19,18 +19,18 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/giveNameWorkout"
-        android:hint="Type name here!"
         android:layout_marginTop="21dp"
         android:layout_below="@+id/workoutName"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:hint="@string/createWorkout_nameInput" />
 
     <Button
-        android:text="Save Workout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/saveWorkout"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/giveNameWorkout"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/createWorkout_buttonExecute" />
 
 </RelativeLayout>
