--- a/app/src/main/res/layout/list_workout_element.xml
+++ b/app/src/main/res/layout/list_workout_element.xml
@@ -11,19 +11,21 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="TextView"
+            android:text="Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/wle_WorkoutTitle"
-            android:textSize="36sp" />
+            android:textSize="36sp"
+            android:singleLine="true"/>
 
         <TextView
-            android:text="TextView"
+            android:text="Exercices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/wle_Exercises"
             android:textSize="14sp"
-            android:layout_marginBottom="5dp" />
+            android:layout_marginBottom="5dp"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
