--- a/app/src/main/res/layout/popup_addExercise.xml
+++ b/app/src/main/res/layout/popup_addExercise.xml
@@ -1,33 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
-
-    <TextView
-        android:text="@string/createWorkout_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/workoutName"
-        android:layout_marginTop="24dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/searchText"
-        android:layout_below="@+id/workoutName"
-        android:layout_alignParentStart="true" />
-
-    <ListView
-        android:layout_width="match_parent"
-        android:id="@+id/listViewExer"
-        android:layout_below="@+id/searchText"
-        android:layout_alignParentStart="true"
-        android:layout_height="300dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -37,5 +13,30 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="26dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/searchText"
+        android:layout_below="@+id/exerciseName"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="12dp" />
+
+    <TextView
+        android:text="Click an exercise below to add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/exerciseName"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:id="@+id/listViewExer"
+        android:layout_height="300dp"
+        android:layout_below="@+id/searchText"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
