--- a/app/src/main/res/layout/list_exercise_element.xml
+++ b/app/src/main/res/layout/list_exercise_element.xml
@@ -9,10 +9,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ele_ExerciseTitle"
-        android:layout_weight="1"
+        android:layout_weight="0.92"
         android:textSize="20sp"
         android:layout_margin="5dp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:paddingTop="5dp"/>
 
     <ImageView
         android:layout_height="39dp"
