Fået det meste sprog til at virke helt nu. Sorry Mathias :p

--- a/app/src/main/res/layout/activity_exercise_menu.xml
+++ b/app/src/main/res/layout/activity_exercise_menu.xml
@@ -32,7 +32,7 @@
             android:ems="10"
             android:id="@+id/editText"
             android:layout_weight="1"
-            android:hint="Search..." />
+            android:hint="@string/exerciseMenu_search" />
 
     </LinearLayout>
 
