--- a/app/src/main/res/layout/items_child_diet_plan.xml
+++ b/app/src/main/res/layout/items_child_diet_plan.xml
@@ -20,12 +20,13 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="39dp"
         app:srcCompat="@drawable/forward"
         android:layout_alignTop="@+id/childItem"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/imageView2"
-        android:layout_alignBottom="@+id/childItem" />
+        android:layout_alignBottom="@+id/childItem"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
