--- a/app/src/main/res/layout/list_workout_exercise_element_edit.xml
+++ b/app/src/main/res/layout/list_workout_exercise_element_edit.xml
@@ -53,7 +53,7 @@
     </LinearLayout>
     <ImageView
         android:layout_height="39dp"
-        app:srcCompat="@drawable/forward"
+        app:srcCompat="@android:drawable/ic_delete"
         android:id="@+id/ele_image"
         android:layout_width="39dp"
         android:layout_gravity="center"
