--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -3,7 +3,7 @@
 
     <item android:id="@+id/settings"
         android:icon="@drawable/ic_settings_white_24dp"
-        android:title="Settings"
+        android:title="@string/toolbar_settings"
         app:showAsAction="always"/>
 
 </menu>
