--- a/app/src/main/res/layout/list_exercise_element.xml
+++ b/app/src/main/res/layout/list_exercise_element.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ele_ExerciseTitle"
+        android:singleLine="true"
         android:layout_weight="0.92"
         android:textSize="20sp"
         android:layout_margin="5dp"
