Har sat op til at lave drag and drop reordering i Exercise listen under workouts. Virker ikke endnu. (DynamicListView)

--- a/app/src/main/res/layout/activity_workout_exercises_menu.xml
+++ b/app/src/main/res/layout/activity_workout_exercises_menu.xml
@@ -19,11 +19,16 @@
 
     </LinearLayout>
 
-    <ListView
+    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
+        android:id="@+id/dynamiclistview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!--<ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:id="@+id/exerciseList"
-        android:layout_weight="1" />
+        android:layout_weight="1" />-->
 
 </LinearLayout>
