--- a/app/src/main/res/layout/activity_login_akt.xml
+++ b/app/src/main/res/layout/activity_login_akt.xml
@@ -63,21 +63,20 @@
             android:id="@+id/editPassword" />
     </LinearLayout>
 
+
     <Button
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonLogin"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="30dp"
         style="@android:style/Widget.Holo.Button"
         android:backgroundTint="@android:drawable/screen_background_light_transparent"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="20sp"
         android:text="@string/login_buttonExecute" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.40" />
 
     <TextView
         android:text="@string/login_createUser"
