--- a/app/src/main/res/layout/activity_activationkey_akt.xml
+++ b/app/src/main/res/layout/activity_activationkey_akt.xml
@@ -44,6 +44,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView4"
+        android:id="@+id/helpText"
         android:text="@string/settings_activationHelp" />
 </RelativeLayout>
