--- a/app/src/main/res/layout/activity_login_akt.xml
+++ b/app/src/main/res/layout/activity_login_akt.xml
@@ -50,6 +50,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:id="@+id/textPassword"
             android:textColor="@color/colorAccent"
             android:text="@string/login_password" />
@@ -61,6 +62,7 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/editPassword" />
+
     </LinearLayout>
 
 
