Lavet lidt liste halløj sammen med IamHexor :D

--- a/app/src/main/res/layout/list_workout_exercise_element.xml
+++ b/app/src/main/res/layout/list_workout_exercise_element.xml
@@ -4,6 +4,11 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <com.nhaarman.listviewanimations.itemmanipulation.dragdrop.GripView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/gripView"
+        android:layout_margin="5dp"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
